fixed layout bug

--- a/src/examples/style.css
+++ b/src/examples/style.css
@@ -25,5 +25,4 @@ body {
 
 .content {
     flex: 1 1 100%;
-    overflow: hidden;
 }
